--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
 		"doc": "doc"
 	},
 	"scripts": {
-		"test": "npx jest"
+		"test": "npx jest",
+		"lint": "npx eslint ."
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.31.0",
+		"eslint": "^9.31.0",
+		"eslint-plugin-jest": "^29.0.1",
+		"globals": "^16.3.0",
 		"jest": "^30.0.4"
 	}
 }
